--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<caption>Student Details</caption>
+	<table class="sd">
+		<thead>
+			<tr>
+				<th><h1>NAME</h1></th>
+				<th><h1>AGE</h1></th>
+				<th><h1>BRANCH</h1></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Shaw</td>
+				<td>20</td>
+				<td>CSE</td>
+			</tr>
+			<tr>
+				<td>Adil</td>
+				<td>21</td>
+				<td>ESE</td>
+			</tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
